# project-raven

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  RAVEN_SYSTEM_PROMPT.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
.windsurf/automation-memory/: project-raven---flagged-vulnerabilities.json
deployment/: lmstudio.service  raven.service
docs/: SLO.md  approval-and-redteam.md  methodology.md  tools.md  training.md
docs/Whitepaper/: 00-abstract.md  01-introduction.md  02-related-work.md  03-methodology.md  04-implementation.md  05-evaluation.md  06-case-studies.md  07-discussion-conclusion.md  README.md  WHITEPAPER.md  references.md
docs/runbooks/: README.md  ai-provider-outage.md  api-key-rotation.md  audit-investigation.md  pod-restart-loop.md
logo/ascii/: ascii-art.txt
raven/: __init__.py
raven/ai/: __init__.py  base.py  factory.py  lmstudio_client.py  model_orchestrator.py  openrouter_agent.py  registry.py
raven/api/: __init__.py  main.py  routes_agent.py  routes_approval.py  routes_redteam.py  routes_tools.py  routes_training.py
raven/approval/: __init__.py  dependencies.py  gate.py  models.py  patterns.py  smart.py  store.py
raven/audit/: __init__.py  middleware.py  store.py
tests/: __init__.py  conftest.py  test_ai_factory.py  test_anomaly_detector.py  test_approval.py  test_ares_adapter.py  test_auth.py  test_behavioral_profiler.py  test_ebpf_ghidra.py  test_empire_client.py  test_ghidra_analyzer.py  test_nuclei_scanner.py  test_openrouter_agent.py  test_provider_registry.py  test_redteam.py  test_security_findings.py  test_system_prompt.py  test_threat_detector.py  test_tool_adapters.py  test_training.py  test_tui.py  test_vuln_fixes.py  test_whois_client.py
(+297 files in other folders)
