[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-raven"
version = "0.1.0"
description = "Autonomous Defense System with ML/AI for Zero-Day Threat Detection"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "daemon", email = "daemon@example.com"}
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "torch>=2.2.0",
    "scikit-learn==1.4.0",
    "tensorflow==2.15.0",
    "numpy==1.26.3",
    "pandas==2.1.4",
    "scipy==1.11.4",
    "python-nmap==0.7.1",
    "paramiko==3.4.0",
    "pymetasploit3==1.0.5",
    "celery==5.3.6",
    "redis==5.0.1",
    "kafka-python==2.0.2",
    "psycopg2-binary==2.9.9",
    "sqlalchemy==2.0.25",
    "alembic==1.13.1",
    "prometheus-client==0.19.0",
    "structlog==24.1.0",
    "elasticsearch==8.11.1",
    "networkx==3.2.1",
    "scapy==2.5.0",
    "cryptography==41.0.7",
    "pyjwt==2.8.0",
    "python-multipart==0.0.6",
]

[project.scripts]
raven = "raven.cli.main:app"

[project.optional-dependencies]
ai = [
    "anthropic>=0.28.0",
    "typer[all]>=0.12.0",
]
dev = [
    "pytest==7.4.4",
    "pytest-asyncio==0.23.3",
    "pytest-cov==4.1.0",
    "black==24.1.1",
    "flake8==7.0.0",
    "mypy==1.8.0",
]

[project.urls]
Homepage = "https://github.com/daemon/project-raven"
Repository = "https://github.com/daemon/project-raven"

[tool.setuptools.packages.find]
where = ["."]
